<resources>
    <string name="app_name">당근마켓</string>
    <string name="home">홈</string>
    <string name="category">카테고리</string>
    <string name="writing">글쓰기</string>
    <string name="chat">채팅</string>
    <string name="profile">나의 당근</string>
    <string name="location">청라1동</string>
    <string name="loading">로딩중입니다.</string>
    <string name="network_error">네트워크 연결이 원활하지 않습니다.</string>
    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>


    <!--&lt;!&ndash;    ////&ndash;&gt;-->
    <!--    <string name="start_activity_loading">로딩중입니다.</string>-->
    <!--    <string name="start_activity_loading">로딩중입니다.</string>-->
    <!--    <string name="start_activity_loading">로딩중입니다.</string>-->
    <!--    <string name="start_activity_loading">로딩중입니다.</string>-->
    <!--    <string name="start_activity_loading">로딩중입니다.</string>-->
    <!--&lt;!&ndash;&ndash;&gt;-->

    <!--    <string name="start_activity_loading">로딩중입니다.</string>-->
    <!--    <string name="start_activity_loading">로딩중입니다.</string>-->
    <!--    <string name="start_activity_loading">로딩중입니다.</string>-->
    <!--    <string name="start_activity_loading">로딩중입니다.</string>-->
    <!--&lt;!&ndash;&ndash;&gt;-->


</resources>



